--- a/ecoplastol/frmMain.xaml
+++ b/ecoplastol/frmMain.xaml
@@ -41,8 +41,8 @@
                 Height="40"
                 Padding="10,0,0,0"
                 FontSize="24" Click="BtnPlanowanie_Click"/>
-        <Button Content="KONFIGURACJA" HorizontalAlignment="Left" Margin="257,38,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Button Content="PLANOWANIE 2" HorizontalAlignment="Left" Margin="257,63,0,0" VerticalAlignment="Top" Width="75" Name="btnPlanowanie2" Click="BtnPlanowanie2_Click"/>
+        <Button Content="KONFIGURACJA" HorizontalAlignment="Left" Margin="257,38,0,0" VerticalAlignment="Top" Width="111" Click="Button_Click" Height="40"/>
+        <Button Content="PLANOWANIE 2" HorizontalAlignment="Left" Margin="257,83,0,0" VerticalAlignment="Top" Width="111" Name="btnPlanowanie2" Click="BtnPlanowanie2_Click" RenderTransformOrigin="0.527,2.25" Height="40"/>
 
     </Grid>
 </Window>
