--- a/ecoplastol/frmZlecenieProdukcji.xaml
+++ b/ecoplastol/frmZlecenieProdukcji.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ecoplastol"
         xmlns:ts="clr-namespace:ecoplastol"
         mc:Ignorable="d"
-        Title="Zlecenie produkcji" Height="600" Width="800" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Zlecenie produkcji" Height="600" Width="820" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
 
         <ResourceDictionary>
@@ -57,7 +57,7 @@
             </Style>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Background="LightSteelBlue">
+    <Grid Name="grdZlecenie" Background="LightSteelBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="30"/>
@@ -85,12 +85,14 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="10"/>
             <!--<ColumnDefinition Width="*"/>-->
             
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0" Grid.Column="0" Padding="10,3,0,0" FontSize="24" Content="M" Name="lblNazwaMaszyny" />
         <Label Grid.Row="1" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Wyrób :"/>
-        <ComboBox x:Name="cbbWyrobKod" Grid.Row="1" Grid.Column="1" FontSize="14">
+
+        <ComboBox x:Name="cbbWyrobKod" Grid.Row="1" Grid.Column="1" FontSize="14" SelectionChanged="CbbWyrobKod_SelectionChanged">
             <ComboBox.ItemTemplateSelector>
                 <ts:ComboBoxItemTemplateSelector>
                     <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
@@ -113,33 +115,186 @@
         <!--<Border Grid.Row="3" Grid.ColumnSpan="4" BorderThickness="1" BorderBrush="black"></Border>-->
         <Label Grid.Row="2" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="12" Content="index"/>
         <Label Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="12" Content="opis"/>
+        <TextBox Grid.Row="3" Grid.Column="0" Margin="0,0,3,0"/>
+        <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3"/>
         <Label Grid.Row="5" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Ilość :"/>
+        <TextBox Grid.Row="5" Grid.Column="1"/>
         <Label Grid.Row="6" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data rozpoczęcia :"/>
         <DatePicker Grid.Row="6" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}"/>
         <Label Grid.Row="7" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Data zakończenia :"/>
         <DatePicker Grid.Row="7" Grid.Column="1" FontSize="16" CalendarStyle="{StaticResource styleCalendar}"/>
         <Label Grid.Row="8" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii surowca :"/>
+        <TextBox Grid.Row="8" Grid.Column="1" />
         <Label Grid.Row="8" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Mieszanka :"/>
+        <ComboBox x:Name="cbbTracePEm" Grid.Row="8" Grid.Column="3" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding opis}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="40"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding opis}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
         <Label Grid.Row="9" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii drutu :"/>
+        <TextBox Grid.Row="9" Grid.Column="1" />
         <Label Grid.Row="9" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Rodzaj drutu :"/>
+        <ComboBox x:Name="cbbWyrobRodzajDrutu" Grid.Row="9" Grid.Column="3" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding indeks}" Width="20"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}" Width="120"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
         <Label Grid.Row="10" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Oporność :"/>
+        <TextBox Grid.Row="10" Grid.Column="3" />
         <Label Grid.Row="11" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Nr partii produkcyjnej :"/>
+        <TextBox Grid.Row="11" Grid.Column="1" />
         <Label Grid.Row="11" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakład produkcyjny :"/>
+        <ComboBox x:Name="cbbTraceProducent" Grid.Row="11" Grid.Column="3" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="20"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
+
         <Label Grid.Row="12" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="SDR :"/>
+        <ComboBox x:Name="cbbTraceSDR" Grid.Row="12" Grid.Column="1" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="20"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
+
         <Label Grid.Row="12" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Zakres SDR :"/>
+        <ComboBox x:Name="cbbWyrobZakresSDR" Grid.Row="12" Grid.Column="3" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="13"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
+
         <Label Grid.Row="13" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 1 :"/>
+        <TextBox Grid.Row="13" Grid.Column="1" />
         <Label Grid.Row="13" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas zgrzewania 2 :"/>
+        <TextBox Grid.Row="13" Grid.Column="3" />
         <Label Grid.Row="14" Grid.Column="0" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 1 :"/>
+        <ComboBox x:Name="cbbITFCC1" Grid.Row="14" Grid.Column="1" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="20"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
+
         <Label Grid.Row="14" Grid.Column="2" VerticalContentAlignment="Center" Padding="5,0,0,0" FontSize="18" Content="Czas chłodzenia 2 :"/>
-        
-        
-        
-        
-        
-        
-        
-        
-        
+        <ComboBox x:Name="cbbITFCC2" Grid.Row="14" Grid.Column="3" FontSize="14">
+            <ComboBox.ItemTemplateSelector>
+                <ts:ComboBoxItemTemplateSelector>
+                    <ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding wartosc}" />
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.SelectedTemplate>
+                    <ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding parametr}" Width="20"/>
+                                <TextBlock Text="-  "/>
+                                <TextBlock Text="{Binding wartosc}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ts:ComboBoxItemTemplateSelector.DropDownTemplate>
+                </ts:ComboBoxItemTemplateSelector>
+            </ComboBox.ItemTemplateSelector>
+        </ComboBox>
+
+
+
+
+
+
+
+
+
         <Button Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientLightGreen}" Content="D O D A J"/>
         <Button Grid.Row="16" Grid.Column="2" Grid.ColumnSpan="2" FontSize="22" Style="{StaticResource btnGradientRed}" Content="A N U L U J" Click="Button_Click"/>
         
