--- a/ecoplastol/frmKonfiguracja2.xaml
+++ b/ecoplastol/frmKonfiguracja2.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ecoplastol"
         mc:Ignorable="d"
-        Title="frmKonfiguracja2" Height="600" Width="800">
+        Title="Konfiguracja" Height="600" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.Resources>
 
         <ResourceDictionary>
