--- a/ecoplastol/frmKonfiguracja2.xaml
+++ b/ecoplastol/frmKonfiguracja2.xaml
@@ -117,6 +117,36 @@
                     </Grid>
                 </Grid>
             </TabItem>
+            <TabItem Header="PRODUKCJA">
+                <Grid Name="gridProd">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="40"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Label  Grid.Row="0" FontSize="14" Padding="10,0,0,0" Name="lblProdinfo" Content="_" />
+                        <Button Grid.Row="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdWyroby" Content="Wyroby" Click="BtnProdWyroby_Click" />
+                        <Button Grid.Row="2" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdMaszyny" Content="Maszyny" Click="BtnProdMaszyny_Click"/>
+                    </Grid>
+                    <Grid x:Name="grdProdDane" Grid.Column="1">
+
+                    </Grid>
+                </Grid>
+            </TabItem>
+
         </TabControl>
         <Button Grid.Row="3" Name="btnZamknij" Content="Z A M K N I J" FontSize="20"/>
     </Grid>
