--- a/ecoplastol/frmKonfiguracja2.xaml
+++ b/ecoplastol/frmKonfiguracja2.xaml
@@ -20,6 +20,16 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style TargetType="Button" x:Key="btnGradientLightOrange">
+                <Setter Property="Background">
+                    <Setter.Value>
+                        <LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
+                            <GradientStop Color="Khaki" Offset="1"/>
+                            <GradientStop Color="White" Offset="0.01"/>
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <Style TargetType="Button" x:Key="btnGradientLightGreen">
                 <Setter Property="Background">
                     <Setter.Value>
@@ -124,6 +134,10 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="10"/>
+                            <ColumnDefinition Width="140"/>
+                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
@@ -137,9 +151,13 @@
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Label  Grid.Row="0" FontSize="14" Padding="10,0,0,0" Name="lblProdinfo" Content="_" />
-                        <Button Grid.Row="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdWyroby" Content="Wyroby" Click="BtnProdWyroby_Click" />
-                        <Button Grid.Row="2" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdMaszyny" Content="Maszyny" Click="BtnProdMaszyny_Click"/>
+                        <Label  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" Padding="10,0,0,0" Name="lblProdinfo" Content="_" />
+                        <Button Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdWyroby" Content="Wyroby" Click="BtnProdWyroby_Click" />
+                        <Button Grid.Row="2" Grid.Column="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientLightOrange}" Name="btnProdTypWyrobu" Content="Typy wyrobów" Click="BtnProdTypWyrobu_Click" />
+                        <Button Grid.Row="3" Grid.Column="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientLightOrange}" Name="btnProdTypZaworu" Content="Typy zaworów" Click="BtnProdTypZaworu_Click" />
+                        <Button Grid.Row="4" Grid.Column="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientLightOrange}" Name="btnProdZakresSDR" Content="Zakresy SDR" Click="BtnProdZakresSDR_Click" />
+                        <Button Grid.Row="5" Grid.Column="1" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientLightOrange}" Name="btnProdRodzajDrutu" Content="Rodzaje drutów" Click="BtnProdRodzajDrutu_Click" />
+                        <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" Padding="10,0,0,0" HorizontalContentAlignment="Left" Style="{StaticResource btnGradientOrange}" Name="btnProdMaszyny" Content="Maszyny" Click="BtnProdMaszyny_Click"/>
                     </Grid>
                     <Grid x:Name="grdProdDane" Grid.Column="1">
 
@@ -148,6 +166,6 @@
             </TabItem>
 
         </TabControl>
-        <Button Grid.Row="3" Name="btnZamknij" Content="Z A M K N I J" FontSize="20"/>
+        <Button Grid.Row="3" Name="btnZamknij" Content="Z A M K N I J" FontSize="20" Click="BtnZamknij_Click"/>
     </Grid>
 </Window>
