--- a/ecoplastol/planowanie/frmPlanowanie2.xaml
+++ b/ecoplastol/planowanie/frmPlanowanie2.xaml
@@ -12,10 +12,11 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1" Name="grMaszyny">
+        <Grid Grid.Row="1" Name="grdMaszyny">
             
         </Grid>
         <Button Grid.Row="2" Name="btnZamknij" Content="Z A M K N I J" FontSize="20" Click="BtnZamknij_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="79,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <DatePicker HorizontalAlignment="Left" Margin="273,0,0,0" VerticalAlignment="Top" FontSize="24" Width="265" x:Name="dpZleceniaNaDzien" SelectedDateChanged="DpZleceniaNaDzien_SelectedDateChanged"/>
     </Grid>
 </Window>
