--- a/ecoplastol/planowanie/MaszynaPanel.xaml
+++ b/ecoplastol/planowanie/MaszynaPanel.xaml
@@ -43,7 +43,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Border Margin="2" BorderThickness="1" BorderBrush="Black" Background="LightYellow">
-        <Grid  Margin="5" Name="grMaszynaPanel">
+        <Grid  Margin="5" Name="grdMaszynaPanel">
 
             <Grid.RowDefinitions>
                 <!-- pasek na menu górne dla maszyny-->
